Fixed overflow-x on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,8 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   padding: 20px 40px;
   background-color: #ffffff;
 }
